2006-11-02  A Balamurugan  <bala@zresearch.com>

	* common/src/ipmi-sdr-api.c (get_sdr_cache_filename,
	flush_sdr_cache_file): added user defined sdr cache directory.

	* ipmi-sel/src/ipmi-sel.c (init_sdr_cache, run_cmd_args): updated
	according to above function call changes.

	* ipmi-sel/src/ipmi-sensors.c (init_sdr_cache, run_cmd_args): like
	wise.

	* ipmi-sel/src/ipmi-sel-argp.c,
	ipmi-sensors/src/ipmi-sensors-argp.c: added --sdr-cache-directory
	argument.  Fixed bug #18034.

2006-11-02  Anand Babu  <ab@zresearch.com>

	* doc/freeipmi.texi: added cross reference for bmc-config command
	line options under bmc-autoconfig section.

2006-11-01  A Balamurugan  <bala@zresearch.com>

	* ipmi-pef/src/Makefile.am: updated.

	* ipmi-pef/src/ipmi-pef-argp.[ch]: added --checkout and --commit
	options.

	* ipmi-pef/src/ipmi-pef-wrapper.[ch] (get_event_filter_table,
	set_event_filter_table, get_number_of_event_filters,
	get_evt_list): new functions.

	* ipmi-pef/src/ipmi-pef.c (checkout_pef_evt, commit_pef_evt): new
	functions.

	* ipmi-pef/src/ipmi-pef.c (run_cmd_args): updated.

	* libfreeipmi/src/udm/ipmi-pef-and-alerting-cmds-udm.c
	(ipmi_cmd_set_pef_configuration_parameters_event_filter_table):
	ipmi_cmd_set_event_filter_table() renamed.

	* libfreeipmi/src/udm/ipmi-pef-and-alerting-cmds-udm.c
	(ipmi_cmd_set_pef_configuration_parameters_event_filter_table_data1_):
	ipmi_cmd_set_filter_table_data1_() renamed.

2006-10-22  Anand V. Avati <avati@zresearch.com>

	* common/src/argp-common.c: -p takes optional password argument.
	If not given, does getpass()
	
2006-10-20  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Added support for --wait-until-on option.

	* ipmipower/src/ipmipower_prompt.c (_cmd_power): Support range of hosts
	that can be passed to power operations.
	
2006-10-16  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-udm.c (ipmi_open_outofband): Fix
	segfault corner case.

2006-10-14  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add ipmi-pef.
	