@@ -33,6 +33,9 @@ List sensors from group
 .TP
 \fB\-s\fR "SENSORS-LIST", \fB\-\-sensors=\fR"SENSORS-LIST"
 List given sensors
+.TP
+\fB\-\-sdr\-cache\-directory\fR=\fIDIRECTORY\fR
+Use DIRECTORY for sensor cache
 .SH "EXAMPLES"
 .B # ipmi-sensors 
 .PP
